Se agregan el script de base de datos y su conexion desde node para empezar con los servicios
